<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/menu_search"
    android:icon="@drawable/ic_search"
    android:title="@string/search"
    app:showAsAction="ifRoom"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    />

    <group android:checkableBehavior="single">
        <item android:id="@+id/sort_by_title"
            android:title="@string/sort_by_title">
            <menu>
                <item android:id="@+id/menu_title_asc"
                    android:title="@string/title_asc"/>
                <item android:id="@+id/menu_title_desc"
                    android:title="@string/title_desc"/>
                      </menu>
        </item>
        <item android:id="@+id/sort_by_popularity"
            android:title="@string/sort_by_popularity">
            <menu>
                <item android:id="@+id/menu_popularity_asc"
                    android:title="@string/title_asc"/>
                <item android:id="@+id/menu_popularity_desc"
                    android:title="@string/title_desc"/>
                      </menu>
        </item>
        <item
            android:id="@+id/sort_by_date"
            android:title="@string/sort_by_date">
            <menu>
                <item
                    android:id="@+id/menu_date_asc"
                    android:title="@string/title_asc" />
                <item
                    android:id="@+id/menu_date_desc"
                    android:title="@string/title_desc" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_clear_all"
        android:title="@string/clear_all"/>
</menu>