<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="showErrorLayout"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".modules.movies.MoviesActivity">

        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:visibility="@{showErrorLayout ? View.GONE : View.VISIBLE}">

            <TextView
                android:id="@+id/tv_not_found"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_movies_found"
                android:visibility="gone" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                shimmer:duration="800">

                <!-- Adding 7 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            android:visibility="@{showErrorLayout ? View.VISIBLE : View.GONE}">

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:gravity="center"
                android:text="@string/msg_api_error" />

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry" />
        </LinearLayout>
    </LinearLayout>
</layout>