<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.momentous.movies_app.entity.network.MoviesDetailsResponse" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context=".modules.movie_details.MovieDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/layout_toolbar" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:orientation="horizontal">

            <ImageView

                android:layout_width="wrap_content"
                android:maxWidth="150dp"
                android:layout_height="180dp"
                android:loadImage="@{movie.image}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@{movie.title}"
                    android:textSize="16sp"
                    tools:text="Bad Boys for Life" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tagline"
                    android:textColor="@color/black"

                    tools:text="A new era of wonder begins." />

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    checkText="@{movie.tagline}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    tools:text="A new era of wonder begins." />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/release_status"
                        android:textColor="@color/black"
                        tools:text="Released" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/release_date"

                        android:textColor="@color/black"
                        tools:text="2020-12-16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        checkText="@{movie.status}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        tools:text="Released" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        checkText="@{movie.release_date}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        tools:text="2020-12-16" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:cardCornerRadius="2dp"

        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"

            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/description"
                android:textSize="16sp"
                />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                fixTextBig="@{movie.description}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:text="Marcus and Mike are forced to confront new threats, career changes, and midlife crises as they join the newly created elite team AMMO of the Miami police department to take down the ruthless Armando Armas, the vicious leader of a Miami drug cartel." />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="5dp"
        android:padding="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"

            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:tabBackground="@color/white"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/purple_500"
                app:tabIndicatorHeight="5dp"

                app:tabMode="fixed"
                app:tabTextColor="@android:color/black" />


            <LinearLayout
                android:id="@+id/ll_cast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_not_found_cast"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_data_found" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_not_found_review"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_data_found" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>